fixed bug where signal name was not found

--- a/include/website.html
+++ b/include/website.html
@@ -55,7 +55,7 @@
 
   <br><br>
   <form action="/time">
-    <input type="submit" name="time_sync_button" value="sync timezone">
+    <input type="submit" name="time_sync_button" value="sync time">
     <!-- on reload time is written in invisible input field of form-->
     <input style="visibility: hidden" id="time_dummy" name="time_dummy" type="text" placeholder>
   </form>
