--- a/include/website.html
+++ b/include/website.html
@@ -11,13 +11,14 @@
     input[type=text] {padding:5px; border:2px solid #ccc; -webkit-border-radius: 5px; border-radius: 5px;}
     input[type=submit] {padding:5px 15px; background:#ccc; border:0 none; cursor:pointer; -webkit-border-radius: 5px; border-radius: 5px;}
     h2 {text-align: center;}
+    p {text-align: center; color: #aaa !important; font-size: 14px;}
     div[id=error_message] {color: red; text-align: center;}
     button {padding:5px 15px; background:#ccc; border:0 none; cursor:pointer; -webkit-border-radius: 5px; border-radius: 5px;}
   </style>
 </head>
 <body onload="get_data();">
   <h2>IR-Controller</h2>
-  <br>
+  <p id="apinfo">AP-Mode</p>
   <div id="error_message">System message: error message</div>
   <br>
   <h3>Signals:</h3>
@@ -213,7 +214,6 @@
       xhttpError.open("GET", "error", true);
       xhttpError.send();
 
-      // TODO: if in ap mode: write sync time and if not in ap mode: write sync timezone
       // gets AP-mode status from backend
       var xhttpAP = new XMLHttpRequest();
       xhttpAP.onreadystatechange = function() {
@@ -223,14 +223,26 @@
 
           // checks if AP mode is enabled
           if (response == "true") {
+            // change button texts
             document.getElementById("apmode_button").value = "Disable AP mode";
+            documant.getElementById("sync_button").value = "Sync time";
+
             // show password form
             document.getElementById("change_password").style.display = "block";
+
+            // change apinfo
+            document.getElementById("apinfo").innerHTML = "AP-Mode";
           } 
           else if (response == "false") {
+            // change button texts
             document.getElementById("apmode_button").value = "Enable AP mode";
+            documant.getElementById("sync_button").value = "Sync timezone";
+
             // hide password form
             document.getElementById("change_password").style.display = "none";
+
+            // change apinfo
+            document.getElementById("apinfo").innerHTML = "Station-Mode";
           }
         }
       };
