fix website update

--- a/include/website.html
+++ b/include/website.html
@@ -61,7 +61,7 @@
   <br><hr><br>
 
   <form action="/time">
-    <input type="submit" name="time_sync_button" value="sync time">
+    <input id="sync_button" type="submit" name="time_sync_button" value="sync time">
     <!-- on reload time is written in invisible input field of form-->
     <input style="visibility: hidden" id="time_dummy" name="time_dummy" type="text" placeholder>
   </form>
@@ -231,7 +231,7 @@
             document.getElementById("change_password").style.visibility= "visible";
 
             // change apinfo
-            document.getElementById("apinfo").value = "AP-Mode";
+            document.getElementById("apinfo").innerHTML = "AP-Mode";
           } 
           else if (response == "false") {
             // change button texts
@@ -242,7 +242,7 @@
             document.getElementById("change_password").style.visibility= "hidden";
 
             // change apinfo
-            document.getElementById("apinfo").value = "Station-Mode";
+            document.getElementById("apinfo").innerHTML = "Station-Mode";
           }
         }
       };
