fixed time and tests

--- a/include/website.html
+++ b/include/website.html
@@ -60,13 +60,9 @@
 
   <br><hr><br>
 
-  <form action="/time">
-    <input id="sync_button" type="submit" name="time_sync_button" value="sync time">
-    <!-- on reload time is written in invisible input field of form-->
-    <input style="visibility: hidden" id="time_dummy" name="time_dummy" type="text" placeholder>
-  </form>
+  <button id="sync_button" name="time_sync_button" onclick="send_time()">sync timezone</button>
 
-  <br>
+  <br><br>
 
   <form action="/credentials">
     <input type="submit" name="reset_credentials_button" value="reset WiFi credentials">
@@ -113,6 +109,24 @@
       localStorage.setItem('current_program', document.getElementById('selected_program').value);
     };
 
+    function send_time() {
+      /*
+      This function sends the current time to the ESP8266.
+      It is used to synchronize the time of the ESP8266 with the time of the user.
+      */
+
+      // gets current time zone
+      var today = new Date()
+      var weekday_time = today.getDay() + " " + today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+      var timezone = today.getTimezoneOffset();
+
+      // sends time zone to ESP8266
+      var xhttp = new XMLHttpRequest();
+      xhttp.open("GET", "/time?weekday_time=" + weekday_time + " " + timezone, true);
+      window.location = "/time"
+      xhttp.send();
+    }
+
     // Inspired by: https://circuitdigest.com/microcontroller-projects/ajax-with-esp8266-dynamic-web-page-update-without-reloading
     function get_data() {
       /*
@@ -123,15 +137,6 @@
       - inserts the code name and code in the corresponding fields if the user wants to edit a program
       - updates the error message
       */
-
-      // TODO: find better solution since time is only updated on reload and therfore a past time is sent
-      // gets current time zone
-      var today = new Date()
-      var weekday_time = today.getDay() + " " + today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
-      var timezone = today.getTimezoneOffset();
-
-      // writes time zone to invisible input field
-      document.getElementById("time_dummy").value = weekday_time + " " + timezone;
 
       // checks if this is the first time the user opens the website
       if (localStorage.getItem("hasCodeRunBefore") === null) {
@@ -226,7 +231,7 @@
           if (response == "true") {
             // change button texts
             document.getElementById("apmode_button").value = "Disable AP mode";
-            document.getElementById("sync_button").value = "Sync time";
+            document.getElementById("sync_button").innerHTML = "sync time";
 
             // show password form
             document.getElementById("change_password").style.visibility= "visible";
@@ -237,7 +242,7 @@
           else if (response == "false") {
             // change button texts
             document.getElementById("apmode_button").value = "Enable AP mode";
-            document.getElementById("sync_button").value = "Sync timezone";
+            document.getElementById("sync_button").innerHTML = "sync timezone";
 
             // hide password form
             document.getElementById("change_password").style.visibility= "hidden";
