--- a/include/website.html
+++ b/include/website.html
@@ -2,6 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>IR Remote</title>
+  <!-- CSS -->
   <style>
     html {font-family: Arial; display: inline-block;}
     body {max-width: 500px; margin: 5%; padding-bottom: 25px;} 
@@ -17,10 +18,13 @@
   </style>
 </head>
 <body onload="get_data();">
+  <!-- status messages on top of page -->
   <h2>IR-Controller</h2>
   <p id="apinfo">AP-Mode</p>
   <div id="error_message">System message: error message</div>
   <br>
+
+
   <h3>Signals:</h3>
 
   <form action="/form">
@@ -60,6 +64,7 @@
 
   <br><hr><br>
 
+  <!-- buttons at the bottom of page -->
   <button id="sync_button" name="time_sync_button" onclick="send_time()">sync timezone</button>
 
   <br><br>
@@ -86,7 +91,7 @@
     <input type="submit" name="change_password_button" value="change password">
   </form>
 
-
+  <!-- JavaScript -->
   <script>
     function removeOptions(select_element) {
       /*
